--- a/INDEX.html
+++ b/INDEX.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#Home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#About">About</a>
+                <a class="nav-link" href="#About">Know us</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#Portfolio">Portfolio</a>
@@ -140,7 +140,7 @@
             <img class="card-img-top" src="image/rawpixel-679097-unsplash.jpg">
             <div class="card-body">
             <h4>Jessica Miller</h4>
-            <p>This is the best Coffee place in the town</p>
+            <p>This is the best Coffee place of Karachi</p>
             
             </div>
         
